fix layout bugs at different orientations

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
   background: var(--callout);
   border-top: thick solid var(--border);
   display: grid;
-  grid-gap: var(--gutter);
+  gap: var(--gutter);
   grid-template-columns: repeat(auto-fit, minmax(var(--fit-min, 10rem), 1fr));
   font-size: var(--small);
   padding: var(--spacer) var(--gutter);
